# cumtd-eta-drift

./: .gitignore  README.md  databricks.yml  pyproject.toml
.github/workflows/: deploy-databricks.yml  deploy-lambda.yml
dbt/: dbt_project.yml  profiles.yml  profiles.yml.example
dbt/models/: sources.yml
dbt/models/marts/: daily_route_drift_summary.sql  daily_stop_drift_summary.sql  departure_drift_metrics.sql  eta_trust_route_scores.sql  eta_trust_route_stop_heatmap.sql  eta_trust_stop_scores.sql  schema.yml
dbt/models/staging/: stg_departure_ingestion_audit.sql  stg_departure_snapshots.sql  stg_route_colors.sql
dbt/seeds/: route_colors.csv
lambda/: README.md  lambda_function.py  setup_aws.sh
notebooks/: 01_ingest_departure_snapshots.py  02_compute_departure_drift_metrics.py  03_analyze_departure_drift.py  03_explore_eta_drift.py  04_verify_pipeline_health.py  05_model_eta_trust_score.py  05_predict_departure_drift.ipynb  06_eta_trust_dashboard.py  06_eta_trust_dashboard_preview.py  eta_analysis_utils.py  run_dbt.py
